footer added, icons added, messages style...

--- a/account-edit-profile.html
+++ b/account-edit-profile.html
@@ -96,7 +96,7 @@
                         <label for="password">Password:</label>
                         <input type="password" name="" id="passLogin">
                     </div>
-                    <input type="submit" value="Log in">;
+                    <input type="submit" value="Log in">
                 </form>
                 
             </div>
@@ -135,7 +135,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a href="messages.html">Messages</a></li>
-                        <li class="nav-item"><a href="#">Help</a></li>
+                        <li class="nav-item"><a href="help.html">Help</a></li>
                         <li class="nav-profile sign-up-button nav-item"><a href="#"><span class="nameOfUser"></span><img alt="Profile picture" id="playerAvatar"></a>
                             <div class="notification-bubble"><span>12</span></div>
                             <ul class="nav-dropdown">
@@ -262,7 +262,7 @@
                         <div class="hide-for-mobile">
                             <div class="achievements">
                                 <h6>Achievements</h6>
-                                <div><img src="icons/play.png" alt="games played"><p>50+ games played</p></div>
+                                <div><img src="icons/games-played.png" alt="games played"><p>50+ games played</p></div>
                                 <div><img src="icons/courts-added.png" alt="games played"><p>5+ courts added</p></div>
                                 <div><img src="icons/players-played.png" alt="games played"><p>100+ players played</p></div>
                                 <div><img src="icons/spent.png" alt="games played"><p>$200+ spent</p></div>
@@ -270,10 +270,11 @@
                             </div>
                             <div class="verified">
                                 <h6>Verified</h6>
-                                <div><i class="fa fa-check" aria-hidden="true"></i><p>Identity</p></div>
-                                <div><i class="fa fa-check" aria-hidden="true"></i>
+                                <div><img src="icons/check.png" alt="checked">
+                                <p>Identity</p></div>
+                                <div><img src="icons/check.png" alt="checked">
                                 <p>Email adress</p></div>
-                                <div><i class="fa fa-check" aria-hidden="true"></i>
+                                <div><img src="icons/check.png" alt="checked">
                                 <p>Phone number</p></div>
                             </div>
                         </div>
@@ -297,7 +298,7 @@
                         <div class="hide-for-desktop">
                             <div class="achievements">
                                 <h6>Achievements</h6>
-                                <div><img src="icons/play.png" alt="games played"><p>50+ games played</p></div>
+                                <div><img src="icons/games-played.png" alt="games played"><p>50+ games played</p></div>
                                 <div><img src="icons/courts-added.png" alt="games played"><p>5+ courts added</p></div>
                                 <div><img src="icons/players-played.png" alt="games played"><p>100+ players played</p></div>
                                 <div><img src="icons/spent.png" alt="games played"><p>$200+ spent</p></div>
@@ -305,10 +306,11 @@
                             </div>
                             <div class="verified">
                                 <h6>Verified</h6>
-                                <div><i class="fa fa-check" aria-hidden="true"></i><p>Identity</p></div>
-                                <div><i class="fa fa-check" aria-hidden="true"></i>
+                                <div><img src="icons/check.png" alt="checked">
+                                <p>Identity</p></div>
+                                <div><img src="icons/check.png" alt="checked">
                                 <p>Email adress</p></div>
-                                <div><i class="fa fa-check" aria-hidden="true"></i>
+                                <div><img src="icons/check.png" alt="checked">
                                 <p>Phone number</p></div>
                             </div>
                         </div>
@@ -390,7 +392,57 @@
         </div>
     </section>
 
+            <!--************************************ DESKTOP FOOTER START ************************************-->
+            <div class="desktop-footer">
+                <div class="desktop-footer-content">
+                    <div class="upper">
+                        <div class="left">
+                            <div class="row">
+                                <p onclick="location.href='images/404-page-not-found.png'">Community</p>
+                                <p onclick="location.href='images/404-page-not-found.png'">Careers</p>
+                                <p onclick="location.href='help.html'">Help</p>
+                            </div>
+                            <div class="row">
+                                <p onclick="location.href='images/404-page-not-found.png'">Privacy</p>
+                                <p onclick="location.href='images/404-page-not-found.png'">Partners</p>
+                                <p onclick="location.href='images/404-page-not-found.png'">Become a member</p>
+                            </div>
+                            <div class="row">
+                                <p onclick="location.href='images/404-page-not-found.png'">Terms</p>
+                                <p onclick="location.href='images/404-page-not-found.png'">Events</p>
+                                <p onclick="location.href='help.html'">Contact us</p>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <p>Subscribe to our newsletter</p>
+                            <input type="email" name="" id="" placeholder="email adress">
+                            <button class="green-button">Subscribe</button>
+                        </div>
+                    </div>
+                    <div class="lower">
+                        <div class="left">
+                                <img src="logo/sslogo.png" alt="">
+                                <span>
+                                    © Copyright Sportslots 2020
+                                </span>
+                                <span>
+                                    Payments protected by Lorem IPS
+                                </span>
+                        </div>
+                        <div class="right">
+                            <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                            <span><i class="fab fa-twitter" aria-hidden="true"></i></span>
+                            <span><i class="fab fa-facebook" aria-hidden="true"></i></span>
+                            <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                            <span><i class="fab fa-youtube" aria-hidden="true"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+
+
+            <!--************************************ DESKTOP FOOTER END************************************-->
             <!--************************************ MOBILE FOOTER START ************************************-->
             <div class="footer-container">
                 <div class="footer-content">
@@ -407,7 +459,7 @@
                         <p>Messages</p>
                     </div>
                     <div class="profile">
-                        <img src="icons/profileicon.png" alt="profile" id="profileFooter">
+                        <img src="icons/profileicon-orange.png" alt="profile" id="profileFooter">
                         <p>Profile</p>
                     </div>
                 </div>
