--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <label for="password">Password:</label>
                         <input type="password" name="" id="passLogin">
                     </div>
-                    <input type="submit" value="Log in">;
+                    <input type="submit" value="Log in">
                 </form>
                 
             </div>
@@ -163,7 +163,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a href="messages.html">Messages</a></li>
-                        <li class="nav-item"><a href="#">Help</a></li>
+                        <li class="nav-item"><a href="help.html">Help</a></li>
                         <li class="nav-profile sign-up-button nav-item"><a href="#"><span class="nameOfUser"></span><img alt="Profile picture" id="playerAvatar"></a>
                             <div class="notification-bubble"><span>12</span></div>
                             <ul class="nav-dropdown">
@@ -272,7 +272,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block carouselImage" src="carousel/banner.png" alt="Second slide">
+              <img class="d-block carouselImage" src="carousel/banner3.png" alt="Second slide">
               <div class="carousel-caption d-none d-md-block carousel-content">
                 <h3>Players</h3>
                 <p>Looking to add players to your scheduled game?</p>
@@ -280,7 +280,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block carouselImage" src="carousel/banner3.png" alt="Third slide">
+              <img class="d-block carouselImage" src="carousel/banner.png" alt="Third slide">
               <div class="carousel-caption d-none d-md-block carousel-content">
                 <h3>Courts</h3>
                 <p>Looking to book court session?</p>
@@ -307,7 +307,8 @@
         </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block carouselImage" src="carousel/carouselmobile2.png">
+                <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile2.png">
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet2.png">
                 <div class="carousel-caption d-block d-md-block carousel-content">
                   <h3>Games</h3>
                   <p>Looking for already scheduled games that need additional players?</p>
@@ -315,7 +316,8 @@
                 </div>
               </div>
             <div class="carousel-item">
-              <img class="d-block carouselImage" src="carousel/carouselmobile1.png">
+                <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile3.png">
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet3.png">
               <div class="carousel-caption d-block d-md-block carousel-content">
                 <h3>Players</h3>
                 <p>Looking to add players to your scheduled game?</p>
@@ -323,7 +325,8 @@
               </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block carouselImage carouselimage3" src="carousel/carouselmobile3.png">
+                <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile1.png">
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet1.png">
                 <div class="carousel-caption d-block d-md-block carousel-content">
                     <h3>Courts</h3>
                     <p>Looking to book court session?</p>
@@ -1201,6 +1204,58 @@
     </section>
     <!--************************************ FIND PLAYERS SECTION END ************************************-->
 
+
+    <!--************************************ DESKTOP FOOTER START ************************************-->
+    <div class="desktop-footer">
+        <div class="desktop-footer-content">
+            <div class="upper">
+                <div class="left">
+                    <div class="row">
+                        <p onclick="location.href='images/404-page-not-found.png'">Community</p>
+                        <p onclick="location.href='images/404-page-not-found.png'">Careers</p>
+                        <p onclick="location.href='help.html'">Help</p>
+                    </div>
+                    <div class="row">
+                        <p onclick="location.href='images/404-page-not-found.png'">Privacy</p>
+                        <p onclick="location.href='images/404-page-not-found.png'">Partners</p>
+                        <p onclick="location.href='images/404-page-not-found.png'">Become a member</p>
+                    </div>
+                    <div class="row">
+                        <p onclick="location.href='images/404-page-not-found.png'">Terms</p>
+                        <p onclick="location.href='images/404-page-not-found.png'">Events</p>
+                        <p onclick="location.href='help.html'">Contact us</p>
+                    </div>
+                </div>
+                <div class="right">
+                    <p>Subscribe to our newsletter</p>
+                    <input type="email" name="" id="" placeholder="email adress">
+                    <button class="green-button">Subscribe</button>
+                </div>
+            </div>
+            <div class="lower">
+                <div class="left">
+                        <img src="logo/sslogo.png" alt="">
+                        <span>
+                            © Copyright Sportslots 2020
+                        </span>
+                        <span>
+                            Payments protected by Lorem IPS
+                        </span>
+                </div>
+                <div class="right">
+                    <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                    <span><i class="fab fa-twitter" aria-hidden="true"></i></span>
+                    <span><i class="fab fa-facebook" aria-hidden="true"></i></span>
+                    <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                    <span><i class="fab fa-youtube" aria-hidden="true"></i></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!--************************************ DESKTOP FOOTER END************************************-->
 
     <!--************************************ MOBILE FOOTER START ************************************-->
     <div class="footer-container">
