--- a/slot-details-invited-player.html
+++ b/slot-details-invited-player.html
@@ -97,7 +97,7 @@
                         <label for="password">Password:</label>
                         <input type="password" name="" id="passLogin">
                     </div>
-                    <input type="submit" value="Log in">;
+                    <input type="submit" value="Log in">
                 </form>
                 
             </div>
@@ -137,7 +137,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a href="messages.html">Messages</a></li>
-                    <li class="nav-item"><a href="#">Help</a></li>
+                    <li class="nav-item"><a href="help.html">Help</a></li>
                     <li class="nav-profile sign-up-button nav-item"><a href="#"><span class="nameOfUser"></span><img alt="Profile picture" id="playerAvatar"></a>
                         <div class="notification-bubble"><span>12</span></div>
                         <ul class="nav-dropdown">
@@ -407,6 +407,59 @@
 
     </section>
 
+
+    
+<!--************************************ DESKTOP FOOTER START ************************************-->
+<div class="desktop-footer">
+    <div class="desktop-footer-content">
+        <div class="upper">
+            <div class="left">
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Community</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Careers</p>
+                    <p onclick="location.href='help.html'">Help</p>
+                </div>
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Privacy</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Partners</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Become a member</p>
+                </div>
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Terms</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Events</p>
+                    <p onclick="location.href='help.html'">Contact us</p>
+                </div>
+            </div>
+            <div class="right">
+                <p>Subscribe to our newsletter</p>
+                <input type="email" name="" id="" placeholder="email adress">
+                <button class="green-button">Subscribe</button>
+            </div>
+        </div>
+        <div class="lower">
+            <div class="left">
+                    <img src="logo/sslogo.png" alt="">
+                    <span>
+                        © Copyright Sportslots 2020
+                    </span>
+                    <span>
+                        Payments protected by Lorem IPS
+                    </span>
+            </div>
+            <div class="right">
+                <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                <span><i class="fab fa-twitter" aria-hidden="true"></i></span>
+                <span><i class="fab fa-facebook" aria-hidden="true"></i></span>
+                <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                <span><i class="fab fa-youtube" aria-hidden="true"></i></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!--************************************ DESKTOP FOOTER END************************************-->
 <!--************************************ MOBILE FOOTER START ************************************-->
 <div class="footer-container">
     <div class="footer-content">
