--- a/slot-details-confirmed.html
+++ b/slot-details-confirmed.html
@@ -97,7 +97,7 @@
                         <label for="password">Password:</label>
                         <input type="password" name="" id="passLogin">
                     </div>
-                    <input type="submit" value="Log in">;
+                    <input type="submit" value="Log in">
                 </form>
                 
             </div>
@@ -137,7 +137,7 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a href="messages.html">Messages</a></li>
-                    <li class="nav-item"><a href="#">Help</a></li>
+                    <li class="nav-item"><a href="help.html">Help</a></li>
                     <li class="nav-profile sign-up-button nav-item"><a href="#"><span class="nameOfUser"></span><img alt="Profile picture" id="playerAvatar"></a>
                         <div class="notification-bubble"><span>12</span></div>
                         <ul class="nav-dropdown">
@@ -337,6 +337,34 @@
                     <p class="dislaimer-red">
                         *Please discuss all actions with players. Only the group admins can select options
                     </p>
+                </div>
+                <!-- Notification type 6 -->
+                <div class="booked-slot rebook-turned-on rebook-confirmed">
+                    <img src="icons/rebook-confirmed.png" alt="confirmed">
+                    <div class="text">
+                        <h4 class="span-black">
+                            REBOOK CONFIRMED! CONGRATS!
+                        </h4>
+                        <p>The court owner has accepted your request to have the slot booked in the next 2 months</p>
+                        <p>Enjoy!</p>
+                    </div>
+                </div>
+                <!-- Notification type 7 -->
+                <div class="booked-slot rebook-turned-on rebook-confirmed">
+                    <img src="icons/info_orange_large.png" alt="confirmed">
+                    <div class="text">
+                        <h4 class="span-black">
+                            REBOOK SLOT ENDING!
+                        </h4>
+                        <p>Rebooking will be turned OFF upon the ending of the next slot</p>
+                        <p>Do you wish to keep this slot?</p>
+                        <div class="buttons-rebook">
+                            <button class="green-button">Rebook again</button>
+                            <button class="grey-button">
+                                Turn OFF
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="go-to-chat-div">
@@ -576,6 +604,57 @@
     </div>
 
 
+<!--************************************ DESKTOP FOOTER START ************************************-->
+<div class="desktop-footer">
+    <div class="desktop-footer-content">
+        <div class="upper">
+            <div class="left">
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Community</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Careers</p>
+                    <p onclick="location.href='help.html'">Help</p>
+                </div>
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Privacy</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Partners</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Become a member</p>
+                </div>
+                <div class="row">
+                    <p onclick="location.href='images/404-page-not-found.png'">Terms</p>
+                    <p onclick="location.href='images/404-page-not-found.png'">Events</p>
+                    <p onclick="location.href='help.html'">Contact us</p>
+                </div>
+            </div>
+            <div class="right">
+                <p>Subscribe to our newsletter</p>
+                <input type="email" name="" id="" placeholder="email adress">
+                <button class="green-button">Subscribe</button>
+            </div>
+        </div>
+        <div class="lower">
+            <div class="left">
+                    <img src="logo/sslogo.png" alt="">
+                    <span>
+                        © Copyright Sportslots 2020
+                    </span>
+                    <span>
+                        Payments protected by Lorem IPS
+                    </span>
+            </div>
+            <div class="right">
+                <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                <span><i class="fab fa-twitter" aria-hidden="true"></i></span>
+                <span><i class="fab fa-facebook" aria-hidden="true"></i></span>
+                <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
+                <span><i class="fab fa-youtube" aria-hidden="true"></i></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!--************************************ DESKTOP FOOTER END************************************-->
 <!--************************************ MOBILE FOOTER START ************************************-->
     <div class="footer-container">
         <div class="footer-content">
