--- a/notifications.html
+++ b/notifications.html
@@ -311,7 +311,7 @@
                         <p class="court-available-time"><time>Wed, Oct 3 / 11AM</time> - <time>13PM</time></p>
                     </div>
                     <div class="buttons">
-                        <a href="#">Go to chat</a>
+                        <a href="messages.html">Go to chat</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -337,7 +337,7 @@
                             <span class="price-info">
                                 <span>&#36;65 total</span>
                             </span>
-                        <a href="#" class="go-to-chat">Go to chat</a>
+                        <a href="messages.html" class="go-to-chat">Go to chat</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -418,7 +418,7 @@
                         <span class="booked-players">6 players confirmed</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="#" class="go-to-chat">Go to chat</a>
+                        <a href="messages.html" class="go-to-chat">Go to chat</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -439,7 +439,7 @@
                         <p class="court-available-time"><time>Wed, Oct 3 / 11AM</time> - <time>13PM</time> 
                     </div>
                     <div class="buttons">
-                        <a href="#" class="go-to-chat">Go to chat</a>
+                        <a href="messages.html" class="go-to-chat">Go to chat</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -472,7 +472,7 @@
                             <p>you get 30%<br>
                             <span class="price-dollars">&#36;23 compensation</span></p>
                         </div>
-                        <a href="#" class="go-to-chat">Go to chat</a>
+                        <a href="messages.html" class="go-to-chat">Go to chat</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -494,7 +494,7 @@
                         <span class="booked-players">7 confirmed players</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="#" class="go-to-chat view-payments">View payments</a>
+                        <a href="reservations.html" class="go-to-chat view-payments">View payments</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
@@ -516,7 +516,7 @@
                         <span class="booked-players">7 confirmed players</span></p>
                     </div>
                     <div class="buttons">
-                        <a href="#" class="go-to-chat view-payments">View payments</a>
+                        <a href="reservations.html" class="go-to-chat view-payments">View payments</a>
                     </div>
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
